[package]
name = "hibari-brick-rs"
version = "0.1.0"
authors = ["Tatsuya Kawano <tatsuya@hibaridb.org>"]
build = "build.rs"

[build-dependencies]

[dependencies]
blake2-rfc = "0.2.18"
byteorder = "1.2.2"
data-encoding = "2.1.1"
lazy_static = "1.0.0"
promising-future = "0.2.4"
rmp-serde = "0.13.7"
rocksdb = "0.10.0"
serde = "1.0.37"
serde_derive = "1.0.37"

clippy = { version = "*", optional = true }
