[package]
name = "hashes"
version = "0.1.0"
authors = ["Tatsuya Kawano <tatsuya@hibaridb.org>"]

[dependencies]
blake2 = "0.5.2"
data-encoding = "2.0.0-rc.1"
# generic-array = "0.7.2"
md-5 = { version = "0.4.3", features = ["asm"] }
# md-5 = "0.4.3"
rand = "0.3.15"
# sha2 = { version = "0.5.2", features = ["asm"] }
sha2 = "0.5.2"
sha3 = "0.5.1"